[package]
name = "doclink-checker"
version = "0.1.0"
edition = "2021"

[lib]
name = "doclink_checker"
path = "src/lib.rs"

[[bin]]
name = "doclink-checker"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
